This adds basic functionality to the website

--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
           <label class="form-check-label" for="defaultCheck1">Onion (+$2)</label><br>
           <select id="size" class="form-control form-control-sm"><br>
             <option value="">Choose size</option>
-            <option value="Small">Small $10</option>
-            <option value="Medium">Medium $15</option>
-            <option value="Large">Large $20</option>
+            <option value="small">Small $10</option>
+            <option value="medium">Medium $15</option>
+            <option value="large">Large $20</option>
           </select><br>
         </div>
-        <button class="btn btn-primary" type="submit" id="order">Create Pizza</button>
+        <button class="btn btn-primary" type="submit" id="order">Create Pizza</button><br>
       </form>
     </div>
+  </div>
+  <div>Your total is: <span id="cost"></span>
   </div>
 
   </body>
